--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_gen: ^5.3.1
   get: ^4.6.5
   share_plus: ^7.0.2
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
