--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   share_plus: ^7.0.2
   url_launcher: ^6.1.11
   dio: ^5.2.1+1
+  cached_network_image: ^3.2.3
+  flutter_widget_from_html: ^0.10.2
 
 dev_dependencies:
   flutter_test:
