--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   cached_network_image: ^3.2.3
   flutter_widget_from_html: ^0.10.2
   get_storage: ^2.1.1
+  file_picker: ^5.3.2
+  html_editor_enhanced: ^2.5.1
 
 dev_dependencies:
   flutter_test:
