--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   html_editor_enhanced: ^2.5.1
   percent_indicator: ^4.2.3
   just_audio: ^0.9.34
+  audio_video_progress_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
